--- a/i_love_you.html
+++ b/i_love_you.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Document</title>
+    <title>Shell</title>
     <!-- Bootstrap -->
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.2.1/css/bootstrap.min.css" integrity="sha384-GJzZqFGwb1QTTN6wy59ffF1BuGJpLSa9DkKMp0DgiMDm4iYMj70gZWKYbI706tWS"
         crossorigin="anonymous">
@@ -21,10 +21,10 @@
 
 <body>
     <div class="container animated fadeIn centered">
-        <h1 class="">Welcome</h1>
+        <h2 class="text-light">Happy Valentine's Day</h2>
         <div class="slick-slider">
             <div><img src="Assets/KissMe.jpg" class="img-fluid slider-img" name="Love for You" data-toggle="modal" data-target="#myModal" 
-                desc="I don't remember this exact moment but it was probably from when we first started dating. We've done a lot of growing both as a individuals and as a couple since then. I'm grateful for all the love and support you've given me throughout the years."></div>
+                desc=""></div>
             <div><img src="Assets/Beach.jpg" class="img-fluid slider-img" name="Beach with Bae" data-toggle="modal" data-target="#myModal"
                 desc="I think this was one of the only times we've gotten to go to the beach together. It was great soaking in the sun and feeling the waves of the water with you. We need to do it again sometime."></div>
             <div><img src="Assets/Birthday.jpg" class="img-fluid slider-img" name="21th Birthday" data-toggle="modal" data-target="#myModal"
@@ -36,7 +36,7 @@
             <div><img src="Assets/E3 Heart.jpg" class="img-fluid slider-img" name="E3 Trip" data-toggle="modal" data-target="#myModal"
                 desc="E3 was great but the best part of that trip was having the ability to go anywhere in Cali with you. It was the first time I've fully enjoyed a vacation since I was a kid. Being with you makes life so easy to enjoy."></div>
             <div><img src="Assets/KissShell.jpg" class="img-fluid slider-img" name="Love for Me" data-toggle="modal" data-target="#myModal"
-                desc=""></div>
+                desc="I don't remember this exact moment but it was probably from when we first started dating. We've done a lot of growing both as a individuals and as a couple since then. I'm grateful for all the love and support you've given me throughout the years."></div>
             <div><img src="Assets/RoboHead.jpg" class="img-fluid slider-img" name="Computer Heads" data-toggle="modal" data-target="#myModal"
                 desc="I was so embarassed, being in the middle of a plaza, huffing in spray paint fumes, filming with a computer on my head. But, if I had too, I'd do it again. I'd do just about anything for you."></div>
             <div><img src="Assets/Snow.jpg" class="img-fluid slider-img" name="Snow Day" data-toggle="modal" data-target="#myModal"
@@ -46,6 +46,7 @@
             <div><img src="Assets/artboard.jpg" class="img-fluid slider-img" name="Photoshoot" data-toggle="modal" data-target="#myModal"
                 desc=""></div>
         </div>
+        <p class="my-3" style="font-size: 12px; float: right; color: #C6375F">touch a picture to relive that moment</p>
     </div>
 
     <div class="audio-container">
