--- a/i_love_you.html
+++ b/i_love_you.html
@@ -24,15 +24,15 @@
         <h2 class="text-light">Happy Valentine's Day</h2>
         <div class="slick-slider">
             <div><img src="Assets/KissMe.jpg" class="img-fluid slider-img" name="Love for You" data-toggle="modal" data-target="#myModal" 
-                desc=""></div>
+                desc="I think I surprised you by coming over to your house after work. Your smile is gorgeous. You look so happy to be with me. I'm glad you feel that way about me because I feel the exact same way about you."></div>
             <div><img src="Assets/Beach.jpg" class="img-fluid slider-img" name="Beach with Bae" data-toggle="modal" data-target="#myModal"
                 desc="I think this was one of the only times we've gotten to go to the beach together. It was great soaking in the sun and feeling the waves of the water with you. We need to do it again sometime."></div>
             <div><img src="Assets/Birthday.jpg" class="img-fluid slider-img" name="21th Birthday" data-toggle="modal" data-target="#myModal"
-                desc=""></div>
+                desc="You seemed like you were having such a good time at your 21st birthday party surrounded by your friends and family. I'm always thankful that you choose me to spend the rest of your life with. Meeting you was one of the best things to happen to me."></div>
             <div><img src="Assets/Cambells.jpg" class="img-fluid slider-img" name="NY Trip" data-toggle="modal" data-target="#myModal"
                 desc="We went to this art show during our first trip to New York. I loved that trip and it was even better the second time. I wouldn't mind going back for a third time. "></div>
             <div><img src="Assets/Cosplay.jpg" class="img-fluid slider-img" name="Cosplaying for Momocon" data-toggle="modal" data-target="#myModal"
-                desc=""></div>
+                desc="I think this was the only time we've cosplayed together. For all its trouble, there is something about it that I miss. Maybe we can do a group "></div>
             <div><img src="Assets/E3 Heart.jpg" class="img-fluid slider-img" name="E3 Trip" data-toggle="modal" data-target="#myModal"
                 desc="E3 was great but the best part of that trip was having the ability to go anywhere in Cali with you. It was the first time I've fully enjoyed a vacation since I was a kid. Being with you makes life so easy to enjoy."></div>
             <div><img src="Assets/KissShell.jpg" class="img-fluid slider-img" name="Love for Me" data-toggle="modal" data-target="#myModal"
@@ -40,11 +40,11 @@
             <div><img src="Assets/RoboHead.jpg" class="img-fluid slider-img" name="Computer Heads" data-toggle="modal" data-target="#myModal"
                 desc="I was so embarassed, being in the middle of a plaza, huffing in spray paint fumes, filming with a computer on my head. But, if I had too, I'd do it again. I'd do just about anything for you."></div>
             <div><img src="Assets/Snow.jpg" class="img-fluid slider-img" name="Snow Day" data-toggle="modal" data-target="#myModal"
-                desc=""></div>
+                desc="This is one of my favorite photos of us."></div>
             <div><img src="Assets/V-Day.jpg" class="img-fluid slider-img" name="Valentine's Day" data-toggle="modal" data-target="#myModal"
-                desc=""></div>
+                desc="I remember "></div>
             <div><img src="Assets/artboard.jpg" class="img-fluid slider-img" name="Photoshoot" data-toggle="modal" data-target="#myModal"
-                desc=""></div>
+                desc="We went to Little Five Points for a photoshoot and I actually didn't expect to be apart of it. I remember Aspen saying she didn't manage to get the look she was going for because we were too happy. I'll admit that we do look really happy, not like it's a bad thing. We look really great together."></div>
         </div>
         <p class="my-3" style="font-size: 12px; float: right; color: #C6375F">touch a picture to relive that moment</p>
     </div>
